css and stuff commit

--- a/frontend/src/questionnare.html
+++ b/frontend/src/questionnare.html
@@ -131,11 +131,7 @@
                 <p class="arrow">&#8594;</p>
             </div>
         </form>
-        <form 
-            id="reserve-form"
-            class="question-div"
-            action="/submit"
-            method="post">
+        <form id="reserve-form" class="question-div" action="/submit" method="post">
             <h2 class="question text-question">Do you live on a reserve?</h2>
             <div class="input mc-input radio">
                 <input type="radio" id="reserve-option1" name="reserve" value="reserve">
